k8s/azure-bridge.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: azure-bridge
  namespace: iot-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: azure-bridge
  template:
    metadata:
      labels:
        app: azure-bridge
    spec:
      containers:
      - name: bridge
        image: python:3.10-slim
        command: ["/bin/sh", "-c"]
        args:
          - |
            pip install paho-mqtt==1.6.1
            python -u /app/bridge.py
        volumeMounts:
        - name: script-vol
          mountPath: /app
      volumes:
      - name: script-vol
        configMap:
          name: bridge-script
