k8s/sensor-simulator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sensor-simulator
  namespace: iot-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sensor-simulator
  template:
    metadata:
      labels:
        app: sensor-simulator
    spec:
      containers:
      - name: simulator
        image: python:3.10-slim
        command: ["/bin/sh", "-c"]
        args:
          - |
            pip install paho-mqtt==1.6.1
            python -u /app/publisher.py
        volumeMounts:
        - name: script-vol
          mountPath: /app
      volumes:
      - name: script-vol
        configMap:
          name: simulator-script
