k8s/telegram-bot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telegram-bot
  namespace: iot-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: telegram-bot
  template:
    metadata:
      labels:
        app: telegram-bot
    spec:
      containers:
      - name: telegram-bot
        image: iotgatewayacrpsdtopicy.azurecr.io/telegram-bot:v2
        imagePullPolicy: Always
