k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iot-gateway-ingress
  namespace: iot-gateway
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m" # Allows uploading files/dashboards
spec:
  ingressClassName: nginx
  rules:
  # 1. Route for Home Assistant
  - host: ha.20.255.109.240.nip.io 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: home-assistant-svc
            port:
              number: 8123
              
  # 2. Route for ThingsBoard
  - host: tb.20.255.109.240.nip.io 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: thingsboard-svc
            port:
              number: 9090
